syntax = "proto3";

package com.grpc.poc;
option java_package = "com.grpc.server.stub";
//option java_multiple_files = true;
//option java_outer_classname = "SellServer";

service Sell{
  rpc createSell(SellRequest) returns (SellResponse);
  rpc updateSell(SellRequest) returns (SellResponse);
  rpc getSells(Empty) returns (SellResponse);
}

message SellRequest{
  int32 id = 1;
  string sellType = 2;
}

message SellResponse{
  string responseStatus = 1;
  int32 sellStatus = 2;
}

message Empty{
}